knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map_Member__c/pqcrush__Relationship_Map_Member__c.object-meta.xml
<CustomObject>
    <label>Relationship Map Member</label>
    <nameField>
        <displayFormat>CHM-{0000}</displayFormat>
        <label>Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Map Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>