knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map_Member__c/fields/pqcrush__Contact__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Hierarchy_Member</relationshipName>
    <type>Lookup</type>
</CustomField>