knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map_Member__c/fields/pqcrush__Original_Key_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Original_Key_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Key Stakeholder</label>
    <referenceTo>pqcrush__Key_Stakeholder__c</referenceTo>
    <relationshipLabel>Relationship Map Members</relationshipLabel>
    <relationshipName>Relationship_Map_Members</relationshipName>
    <type>Lookup</type>
</CustomField>