knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map_Member__c/fields/pqcrush__Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Relationship_Map__c</fullName>
    <label>Relationship Map</label>
    <referenceTo>pqcrush__Relationship_Map__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>