knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__Relationship_Map_Member__c/fields/pqcrush__Support__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Support__c</fullName>
    <label>Support (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pqcrush__Key_Stakeholder_Support</valueSetName>
    </valueSet>
</CustomField>